--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,138 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  font-family: "Roboto", sans-serif;
+  /* width: 1600px; */
+  letter-spacing: 0.03em;
+}
+
+p,
+h1,
+h2,
+h3,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+a:focus,
+button {
+  outline: none;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+  width: 1200px;
+}
+
+.section {
+  padding: 94px 0;
+}
+
+.section.no-padding {
+  padding: 0;
+  padding-bottom: 94px;
+}
+
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.header {
+  background-color: #ffffff;
+  border-bottom: 1px solid #ececec;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+}
+
+.header__container {
+  display: flex;
+  text-align: center;
+}
+
+.nav {
+  display: flex;
+  margin-right: 0;
+  margin-left: 0;
+  text-align: center;
+  margin-bottom: 0;
+  align-items: center;
+}
+
+.site-nav {
+  color: #212121;
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding-left: 0;
+}
+
+.site-nav__item {
+  position: relative;
+  overflow: hidden;
+}
+
+.site-nav__link {
+  display: block;
+  padding: 32px 0;
+  color: #212121;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav__link--current {
+  position: relative;
+  color: #2196f3;
+  /* overflow: hidden;  */
+}
+
+.site-nav__link--current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  display: block;
+  background-color: #2196f3;
+  /* animation: 3s linear 1s infinite alternate slidein; */
+  transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav__link--current:hover::after {
+  transform: scaleX(0.5);
+}
+
+.site-nav__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.site-nav__item.link:hover .site-nav__item .link:focus {
+  color: #2196f3;
+}/*# sourceMappingURL=main.css.map */
