--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,3 +2,5 @@
 @import "./utiles/basic";
 @import "./components/page-header";
 @import "./components/nav-header";
+@import "./components/header-logo";
+@import "./components/header-contacts"
