--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,4 +3,6 @@
 @import "./components/page-header";
 @import "./components/nav-header";
 @import "./components/header-logo";
-@import "./components/header-contacts"
+@import "./components/header-contacts";
+@import "./components/hero/hero";
+@import "./components/hero/hero-button";
