--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,5 @@
 @import "./components/header-contacts";
 @import "./components/hero/hero";
 @import "./components/hero/hero-button";
+@import "./components/Featuries/featuries-comonents";
+@import "./components/Icons/featuries-icons";
