--- a/css/main.css
+++ b/css/main.css
@@ -252,4 +252,60 @@ button {
 .hero__btn:hover {
   background-color: #188ce8;
   color: #ffffff;
+}
+
+.features-title__first {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.feature__list {
+  list-style: none;
+  display: flex;
+  margin: 0;
+}
+
+.feature__item {
+  max-width: 270px;
+}
+
+.feature__item:not(:nth-child(1n+4)) {
+  margin-right: 30px;
+}
+
+.feature__sub-title {
+  margin-bottom: 10px;
+  color: #212121;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  margin-top: 0;
+  padding-top: 0;
+  text-transform: uppercase;
+}
+
+.feature__discription {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #757575;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.feature__icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+  background: #f5f4fa;
+  border-radius: 4px;
 }/*# sourceMappingURL=main.css.map */
