--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,7 @@
 @import "./components/hero/hero-button";
 @import "./components/Featuries/featuries-comonents";
 @import "./components/Icons/featuries-icons";
+@import "./components/Activity/activity-componrnts";
+@import "./components/Team/team-components";
+@import "./components/Team/team-list";
+@import "./components/Team/team-socialnetworks";
