--- a/css/main.css
+++ b/css/main.css
@@ -308,4 +308,141 @@ button {
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
+}
+
+.activity__title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  color: #757575;
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+
+.activity__list {
+  list-style: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  display: flex;
+}
+
+.activity__img-wrapper {
+  position: relative;
+}
+
+.activity__text {
+  position: absolute;
+  bottom: 0;
+  padding: 27px 15px;
+  width: 100%;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.activity__item {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.activity__item:not(:nth-child(1n+3)) {
+  margin-right: 30px;
+}
+
+.section.team {
+  background-color: #f5f4fa;
+}
+
+.team_title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  color: #212121;
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+
+.team__list {
+  list-style: none;
+  display: flex;
+}
+
+.team__item {
+  margin-right: 30px;
+  margin-bottom: 0;
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team__item:nth-child(4n) {
+  margin-right: 0;
+}
+
+.team-card {
+  padding: 30px 10px;
+  /* padding-top: 30px;
+  padding-bottom: 30px; */
+}
+
+.team-card__name {
+  color: #212121;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 0;
+}
+
+.team-card__speciality {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #ffffff;
+  margin-top: 0;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.social-networks {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.social-networks__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: #afb1b8;
+}
+
+.social-networks__icons {
+  display: flex;
+  fill: currentColor;
+  width: 20px;
+  height: 20px;
+}
+
+.social-networks__icons:hover {
+  color: #ffffff;
+}
+
+.social-networks__link:hover,
+.social-networks__link:focus {
+  color: #ffffff;
+  background-color: #2196f3;
 }/*# sourceMappingURL=main.css.map */
