--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,7 @@
 @import "./components/Team/team-components";
 @import "./components/Team/team-list";
 @import "./components/Team/team-socialnetworks";
+@import "./components/Clients/clients-title";
+@import "./components/Clients/clients-list";
+@import "./components/Portfolio/portfolio-filter";
+@import "./components/Portfolio/portfolio-card-set";
