--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,9 @@
 @import "./components/Clients/clients-list";
 @import "./components/Portfolio/portfolio-filter";
 @import "./components/Portfolio/portfolio-card-set";
+@import "./components/Portfolio/portfolio-card";
+@import "./components/Footer/page-footer";
+@import "./components/Footer/footer-address";
+@import "./components/Footer/footer-logo";
+@import "./components/Footer/footer-social-networks";
+@import "./components/Footer/footer-subscription-form";
