--- a/sass/utiles/_variables.scss
+++ b/sass/utiles/_variables.scss
@@ -1,7 +1,7 @@
 // * COLOR
 $textTitleColor: #212121;
 $buttonColor: #2196f3;
-$textColor: #757575;
+$text-color: #757575;
 $primaryIconColor: #afb1b8;
 $wightText: #ffffff;
 
