--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,3 +22,11 @@
 @import "./components/Footer/footer-logo";
 @import "./components/Footer/footer-social-networks";
 @import "./components/Footer/footer-subscription-form";
+@import "./components/Modal/backdrop";
+@import "./components/Modal/modal";
+@import "./components/Modal/close-btn";
+@import "./components/Modal/name";
+@import "./components/Modal/comentary-field";
+@import "./components/Modal/checkbox";
+@import "./components/Modal/oder-form";
+@import "./components/Modal/order-form-btn";
