--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -9,12 +9,11 @@
      margin-bottom: 0;
      margin-right: 93px;
 
-     &.page-header__logo--accent {
+     &--accent {
           color: $textTitleColor;
      }
 
 }
-
 
 .footer__logo {
      text-decoration: none;
