--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import "./utiles/basic";
 @import "./components/page-header";
 @import "./components/nav-header";
-@import "./components/header-logo";
+@import "./components/logo";
 @import "./components/header-contacts";
 @import "./components/hero/hero";
 @import "./components/hero/hero-button";
