--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -8,12 +8,11 @@
      margin-top: 0;
      margin-bottom: 0;
      margin-right: 93px;
-
-     &--accent {
+     
+}
+.page-header-logo__accent {
           color: $textTitleColor;
      }
-
-}
 
 .footer__logo {
      text-decoration: none;
@@ -22,14 +21,13 @@
      font-weight: 700;
      font-size: 26px;
      line-height: 1.2;
-     margin-top: 0;
-     margin-bottom: 0;
-     
-    &.logo__accent {
-     color: $wight-text;
+     display: block;
+     margin-bottom: 20px;
+}
+
+.logo__accent {
+     color: $wightText;
      font-weight: 700;
-    }
-    
 }
 
 
