--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,7 @@ button {
 .page-header__logo {
   text-decoration: none;
   font-family: "Raleway", sans-serif;
-  color: #2196f3;
+  color: #212121;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
@@ -149,8 +149,8 @@ button {
   margin-right: 93px;
 }
 
-.logo__accent {
-  color: #212121;
+.page-header-logo__accent {
+  color:  #2196f3;
 }
 
 .contacts-list {
