--- a/sass/components/Modal/_comentary-field.scss
+++ b/sass/components/Modal/_comentary-field.scss
@@ -9,7 +9,7 @@
      font-size: 12px;
      line-height: 1.17;
      letter-spacing: 0.01em;
-     color: $text-color;
+     color: $textColor;
 
      border: 1px solid rgba(33, 33, 33, 0.2);
      border-radius: 4px;
