--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
-@import "./utiles/variables";
-@import "./utiles/basic";
+@import "./utils/basic";
+@import "./utils/variables";
 @import "./components/page-header";
 @import "./components/nav-header";
 @import "./components/header-contacts";
