--- a/css/main.css
+++ b/css/main.css
@@ -567,6 +567,15 @@ button {
   color: #2196f3;
 }
 
+.clients-list__icon {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  fill: currentColor;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .filter {
   list-style: none;
   display: -webkit-box;
