--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,6 +5,26 @@ $textColor: #757575;
 $primaryIconColor: #afb1b8;
 $wightText: #ffffff;
 
+$secondaryTextColor: rgba(255, 255, 255, 0.6);
+
+// icon-button color
+$primaryIconColor: #afb1b8;
+$hoverIconColor: #ffffff;
+$formIconColor: #212121;
+$btnColor: #188ce8;
+
+// background color
+$primaryBgc: #ffffff;
+$secondaryBgc: #2f303a;
+$tertiaryBgc: #f5f4fa;
+
+// * BORDER
+$headerBorder: 1px solid #ececec;
+$portfolioBorder: 1px solid #eeeeee;
+
+// * SHADOW
+$shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
 // * TRANSITION
 $transitionBgc: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 $transitionColor: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
