--- a/sass/components/_nav-header.scss
+++ b/sass/components/_nav-header.scss
@@ -17,6 +17,11 @@
 .site-nav__item {
      position: relative;
      overflow: hidden;
+
+     &:not(:last-child) {
+               margin-right: 50px;
+          }
+
 }
 
 .site-nav__link {
@@ -31,31 +36,25 @@
 .site-nav__link--current {
      position: relative;
      color: $buttonColor;
-     /* overflow: hidden;  */
-}
-
-.site-nav__link--current::after {
-     content: "";
-     position: absolute;
-
-     left: 0;
-     bottom: -1px;
-     width: 100%;
-     height: 4px;
-     border-radius: 2px;
-     display: block;
-     background-color: $buttonColor;
-
-     /* animation: 3s linear 1s infinite alternate slidein; */
-     transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav__link--current:hover::after {
-     transform: scaleX(0.5);
-}
-
-.site-nav__item:not(:last-child) {
-     margin-right: 50px;
+     
+     &::after {
+               content: "";
+               position: absolute;
+     
+               left: 0;
+               bottom: -1px;
+               width: 100%;
+               height: 4px;
+               border-radius: 2px;
+               display: block;
+               background-color: $accentColor;
+     
+               /* animation: 3s linear 1s infinite alternate slider; */
+               transition: $transitionAnimation;
+          }
+     &:hover::after {
+          transform: scaleX(0.5);
+     }
 }
 
 .site-nav__item.link:hover .site-nav__item .link:focus {
