--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,9 @@ button {
   position: relative;
   overflow: hidden;
 }
+.site-nav__item:not(:last-child) {
+  margin-right: 50px;
+}
 
 .site-nav__link {
   display: block;
@@ -113,13 +116,17 @@ button {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.site-nav__link:hover {
+  color: #2196f3;
+}
+.site-nav__link:focus {
+  color: #2196f3;
+}
 
 .site-nav__link--current {
   position: relative;
   color: #2196f3;
-  /* overflow: hidden;  */
 }
-
 .site-nav__link--current::after {
   content: "";
   position: absolute;
@@ -130,18 +137,13 @@ button {
   border-radius: 2px;
   display: block;
   background-color: #2196f3;
-  /* animation: 3s linear 1s infinite alternate slidein; */
+  /* animation: 3s linear 1s infinite alternate slider; */
   -webkit-transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .site-nav__link--current:hover::after {
   -webkit-transform: scaleX(0.5);
           transform: scaleX(0.5);
-}
-
-.site-nav__item:not(:last-child) {
-  margin-right: 50px;
 }
 
 .site-nav__item.link:hover .site-nav__item .link:focus {
@@ -165,7 +167,6 @@ button {
 .contacts-list__item {
   gap: 50px;
 }
-
 .contacts-list__item:not(:last-child) {
   margin-right: 50px;
 }
@@ -187,19 +188,21 @@ button {
 .contacts-list__link {
   margin: 0;
 }
+.contacts-list__link:hover {
+  color: #2196f3;
+}
+.contacts-list__link:focus {
+  color: #2196f3;
+}
 
 .contacts-list__icon {
   display: inline-block;
   margin-right: 10px;
   fill: currentColor;
 }
-
-.link:hover,
-.link:focus {
+.contacts-list__icon:hover {
   color: #2196f3;
 }
-
-.contacts-list__icon:hover,
 .contacts-list__icon:focus {
   color: #2196f3;
 }
@@ -215,8 +218,7 @@ button {
   margin-bottom: 0;
   margin-right: 93px;
 }
-
-.page-header-logo__accent {
+.page-header__logo__accent {
   color: #2196f3;
 }
 
