--- a/sass/components/_nav-header.scss
+++ b/sass/components/_nav-header.scss
@@ -32,6 +32,13 @@
      letter-spacing: 00.02em;
 
      transition: $transitionColor;
+
+     &:hover {
+          color: $buttonColor;
+     }
+     &:focus {
+          color: $buttonColor;
+     }
 }
 .site-nav__link--current {
      position: relative;
