--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -25,6 +25,7 @@ $portfolioBorder: 1px solid #eeeeee;
 
 // * SHADOW
 $shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+$heroShadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
 // * TRANSITION
 $transitionBgc: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
