--- a/sass/components/Featuries/_featuries-comonents.scss
+++ b/sass/components/Featuries/_featuries-comonents.scss
@@ -8,21 +8,37 @@
      white-space: nowrap;
      overflow: hidden;
 }
+.feature {
+     &__list {
+               list-style: none;
+               display: flex;
+               margin: 0;
+          }
 
-.feature__list {
-     list-style: none;
-     display: flex;
-     margin: 0;
-}
+     &__item {
+          max-width: 270px;
 
-.feature__item {
-     max-width: 270px;
-}
+          &:not(:nth-child(1n + 4)) {
+                    margin-right: 30px;
+               }
 
-.feature__item:not(:nth-child(1n + 4)) {
-     margin-right: 30px;
-}
-.feature__sub-title {
+     }
+
+
+// .feature__list {
+//      list-style: none;
+//      display: flex;
+//      margin: 0;
+// }
+
+// .feature__item {
+//      max-width: 270px;
+// }
+
+// .feature__item:not(:nth-child(1n + 4)) {
+//      margin-right: 30px;
+// }
+&__sub-title {
      margin-bottom: 10px;
      color: $textTitleColor;
      font-weight: 700;
@@ -34,11 +50,14 @@
      text-transform: uppercase;
 }
 
-.feature__discription {
+
+&__description {
      font-size: 14px;
      font-weight: 400;
      line-height: 1.7;
      color: $textColor;
      margin-top: 0;
      margin-bottom: 0;
+}
+
 }
