--- a/sass/components/Activity/_activity-componrnts.scss
+++ b/sass/components/Activity/_activity-componrnts.scss
@@ -34,7 +34,7 @@
      text-transform: uppercase;
 
      color: $wightText;
-     background: rgba(47, 48, 58, 0.8);
+     background: $backgroundActivity;
 }
 
 .activity__item {
