--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -19,6 +19,9 @@ $secondaryBgc: #2f303a;
 $tertiaryBgc: #f5f4fa;
 $accentColor: #2196f3;
 
+// background 
+$backgroundActivity: rgba(47, 48, 58, 0.8);
+
 // * BORDER
 $headerBorder: 1px solid #ececec;
 $portfolioBorder: 1px solid #eeeeee;
