--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ button {
   text-decoration: none;
 }
 
-.visually-hidden {
+.title--hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -304,7 +304,7 @@ button {
   color: #ffffff;
 }
 
-.features-title__first {
+.feature-title__first {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -314,7 +314,6 @@ button {
   white-space: nowrap;
   overflow: hidden;
 }
-
 .feature__list {
   list-style: none;
   display: -webkit-box;
