--- a/sass/components/Featuries/_featuries-comonents.scss
+++ b/sass/components/Featuries/_featuries-comonents.scss
@@ -1,4 +1,5 @@
-.features-title__first {
+.feature {
+     &-title__first {
      position: absolute;
      width: 1px;
      height: 1px;
@@ -7,8 +8,9 @@
      padding: 0;
      white-space: nowrap;
      overflow: hidden;
-}
-.feature {
+          }
+          
+
      &__list {
                list-style: none;
                display: flex;
@@ -25,19 +27,6 @@
      }
 
 
-// .feature__list {
-//      list-style: none;
-//      display: flex;
-//      margin: 0;
-// }
-
-// .feature__item {
-//      max-width: 270px;
-// }
-
-// .feature__item:not(:nth-child(1n + 4)) {
-//      margin-right: 30px;
-// }
 &__sub-title {
      margin-bottom: 10px;
      color: $textTitleColor;
