--- a/css/main.css
+++ b/css/main.css
@@ -405,10 +405,9 @@ button {
   margin-right: 30px;
 }
 
-.section.team {
+.team {
   background-color: #f5f4fa;
 }
-
 .team_title {
   text-align: center;
   font-weight: 700;
@@ -418,14 +417,12 @@ button {
   margin-top: 0;
   margin-bottom: 50px;
 }
-
 .team__list {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
 .team__item {
   margin-right: 30px;
   margin-bottom: 0;
@@ -434,17 +431,13 @@ button {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-
 .team__item:nth-child(4n) {
   margin-right: 0;
 }
 
 .team-card {
   padding: 30px 10px;
-  /* padding-top: 30px;
-  padding-bottom: 30px; */
 }
-
 .team-card__name {
   color: #212121;
   font-size: 16px;
@@ -454,7 +447,6 @@ button {
   margin-bottom: 10px;
   margin-top: 0;
 }
-
 .team-card__speciality {
   font-size: 16px;
   font-weight: 400;
