--- a/sass/components/Team/_team-components.scss
+++ b/sass/components/Team/_team-components.scss
@@ -1,8 +1,7 @@
-.section.team {
-     background-color: #f5f4fa;
-}
+.team {
+     background-color: $tertiaryBgc;
 
-.team_title {
+     &_title {
      text-align: center;
      font-weight: 700;
      font-size: 36px;
@@ -11,3 +10,27 @@
      margin-top: 0;
      margin-bottom: 50px;
 }
+     &__list {
+     list-style: none;
+     display: flex;
+}
+     &__item {
+     margin-right: 30px;
+     margin-bottom: 0;
+     background-color: $wightText;
+     border-radius: 0px 0px 4px 4px;
+
+     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+          0px 2px 1px rgba(0, 0, 0, 0.2);
+
+          &:nth-child(4n) {
+     margin-right: 0;
+}
+}
+}
+
+
+
+
+
+
