--- a/sass/components/Team/_team-components.scss
+++ b/sass/components/Team/_team-components.scss
@@ -20,8 +20,7 @@
      background-color: $wightText;
      border-radius: 0px 0px 4px 4px;
 
-     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-          0px 2px 1px rgba(0, 0, 0, 0.2);
+     box-shadow: $shadow;
 
           &:nth-child(4n) {
      margin-right: 0;
