--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -25,6 +25,7 @@ $backgroundActivity: rgba(47, 48, 58, 0.8);
 // * BORDER
 $headerBorder: 1px solid #ececec;
 $portfolioBorder: 1px solid #eeeeee;
+$clientsBorder: 1px solid #2196f3;
 
 // * SHADOW
 $shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
