--- a/css/main.css
+++ b/css/main.css
@@ -573,15 +573,12 @@ button {
   margin-top: 0;
   margin-bottom: 50px;
 }
-
 .filter__item {
   margin-right: 8px;
 }
-
 .filter__item:nth-child(5n) {
   margin-right: 0;
 }
-
 .filter__btn {
   padding: 6px 22px;
   border-radius: 4px;
@@ -598,18 +595,22 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.all {
+.filter__btn:hover {
   color: #ffffff;
   background-color: #2196f3;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-
-.filter__btn:hover,
 .filter__btn:focus {
   color: #ffffff;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.all {
+  color: #ffffff;
+  background-color: #2196f3;
 }
 
 .card-set {
@@ -625,23 +626,46 @@ button {
   margin-bottom: 0;
   gap: 30px;
 }
-
 .card-set__item {
   font-size: 16px;
   line-height: 1.9;
   margin-right: 0;
   margin-left: 0;
 }
-
 .card-set__item:nth-child(3n) {
   margin-right: 0;
+}
+.card-set__link {
+  text-decoration: none;
+  width: 370px;
+  margin-top: 0;
+  margin-right: 0;
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card-set__link:hover {
+  display: block;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.card-set__link:focus {
+  display: block;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card-set__link:hover .card__text,
+.card-set__link:focus .card__text {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .card {
   position: relative;
   overflow: hidden;
 }
-
 .card__text {
   position: absolute;
   padding: 63px 24px;
@@ -660,45 +684,11 @@ button {
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
 }
-
-.card-set__link:hover .card__text,
-.card-set__link:focus .card__text {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-
-.flax-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.card-set__link {
-  text-decoration: none;
-  width: 370px;
-  margin-top: 0;
-  margin-right: 0;
-  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.card-set__link:hover,
-.card-set__link:focus {
-  display: block;
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .card__content {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: none;
 }
-
 .card__title {
   font-size: 18px;
   line-height: 2;
@@ -708,7 +698,6 @@ button {
   margin-bottom: 4px;
   margin-top: 0;
 }
-
 .card__type {
   font-size: 16px;
   font-weight: 400;
@@ -716,6 +705,14 @@ button {
   letter-spacing: 0.03em;
   color: #757575;
   margin-top: 0;
+}
+
+.flax-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .page-footer {
