--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -18,6 +18,7 @@ $primaryBgc: #ffffff;
 $secondaryBgc: #2f303a;
 $tertiaryBgc: #f5f4fa;
 $accentColor: #2196f3;
+$accentCard: rgba(33, 150, 243, 0.9);
 
 // background 
 $backgroundActivity: rgba(47, 48, 58, 0.8);
@@ -30,6 +31,10 @@ $clientsBorder: 1px solid #2196f3;
 // * SHADOW
 $shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 $heroShadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+$portfolioShadowCard: 0px 1px 1px rgba(0, 0, 0, 0.12),
+0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+$portfolioBtnShadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
 // * TRANSITION
 $transitionBgc: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
