--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,8 @@ button {
   margin-bottom: 0;
   margin-right: 93px;
 }
-.page-header__logo__accent {
+
+.page-header-logo__accent {
   color: #2196f3;
 }
 
@@ -750,11 +751,9 @@ button {
   color: #ffffff;
   display: block;
 }
-
 .address__item {
   margin-bottom: 9px;
 }
-
 .address__link {
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
@@ -763,8 +762,9 @@ button {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.address__link:hover,
+.address__link:hover {
+  color: #2196f3;
+}
 .address__link:focus {
   color: #2196f3;
 }
