--- a/css/main.css
+++ b/css/main.css
@@ -793,7 +793,6 @@ button {
   list-style: none;
   gap: 10px;
 }
-
 .social-networks__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -811,7 +810,12 @@ button {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.social-networks__link:hover {
+  background-color: #2196f3;
+}
+.social-networks__link:focus {
+  background-color: #2196f3;
+}
 .social-networks__icon {
   fill: #ffffff;
   width: 20px;
@@ -819,11 +823,6 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.social-networks__link:hover,
-.social-networks__link:focus {
-  background-color: #2196f3;
 }
 
 .subscription-form__text {
