--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -20,6 +20,7 @@ $tertiaryBgc: #f5f4fa;
 $accentColor: #2196f3;
 $accentCard: rgba(33, 150, 243, 0.9);
 $placeholderColor: rgba(255, 255, 255, 0.6);
+$backdropColor: rgba(0, 0, 0, 0.2);
 
 // background 
 $backgroundActivity: rgba(47, 48, 58, 0.8);
