--- a/css/main.css
+++ b/css/main.css
@@ -1037,46 +1037,43 @@ button {
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.form-field__commentary:focus,
-.form-field__commentary:focus-within {
-  border: 1px solid #2196f3;
-  outline: #2196f3;
-}
-
 .form-field__commentary::-webkit-input-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .form-field__commentary::-moz-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .form-field__commentary:-ms-input-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .form-field__commentary::-ms-input-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .form-field__commentary::placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
+}
+.form-field__commentary:focus {
+  border: 1px solid #2196f3;
+  outline: #2196f3;
+}
+.form-field__commentary:focus-within {
+  border: 1px solid #2196f3;
+  outline: #2196f3;
 }
 
 .checkbox-wrapper {
