--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/basic";
 @import "./utils/variables";
+@import "./utils/breakepoints";
 @import "./components/page-header";
 @import "./components/nav-header";
 @import "./components/header-contacts";
