--- a/sass/utils/_basic.scss
+++ b/sass/utils/_basic.scss
@@ -29,6 +29,19 @@ button {
      margin: 0 auto;
      padding: 0 15px;
      width: 1200px;
+
+     // @media screen and (max-width: 767px) {
+     //           max-width: 480px;
+     
+     //      }
+     
+     //      @media screen and (max-width:$tablet) {
+     //           width: 768px;
+     //      }
+     
+     //      @media screen and (max-width:$desktop) {
+     //           width: 1200px;
+     //      }
 }
 
 .section {
